tests/mm0_mmu/fail/bad-int4.mm0
--                      V--  forbidden sign
prefix plus: $ + $ prec -1;
